small fix to css for reviews to change button to have better contrast

--- a/frontend/src/components/ReviewsComponent/reviews.css
+++ b/frontend/src/components/ReviewsComponent/reviews.css
@@ -28,3 +28,8 @@
    margin-bottom: 5px;
    margin-top: 0;
 }
+
+.buttonDiv > button {
+   color: whitesmoke;
+   background-color: rgb(46, 46, 46);
+}
